[FEATURE] Replaced String.format to formatted