@@ -66,12 +66,12 @@ public class DiscordBotListener extends ListenerAdapter {
                 String[] cmd = CommonHelper.parseCommand(content.substring(config.prefix.length()));
                 Command command = server.commandHandler.findCommand(cmd[0]);
                 if (command == null) {
-                    throw new CommandException(String.format("Command '%s' not found", cmd[0]));
+                    throw new CommandException("Command '%s' not found".formatted(cmd[0]));
                 }
                 String[] args = new String[cmd.length - 1];
                 System.arraycopy(cmd, 1, args, 0, cmd.length - 1);
                 command.invoke(args);
-                String fullLog = container.lines.stream().map((x) -> String.format("[%s] %s %s", x.level, x.message, x.exception == null ? "" : x.exception)).collect(Collectors.joining("\n"));
+                String fullLog = container.lines.stream().map((x) -> "[%s] %s %s".formatted(x.level, x.message, x.exception == null ? "" : x.exception)).collect(Collectors.joining("\n"));
                 channel.sendMessage(new MessageBuilder()
                         .append("Команда выполнена успешно. Лог: ")
                         .appendCodeBlock(fullLog, "")
@@ -81,7 +81,7 @@ public class DiscordBotListener extends ListenerAdapter {
                         .append("Произошла ошибка при парсинге команды: ".concat(e.getMessage()))
                         .build()).queue();
             } catch (Exception e) {
-                String fullLog = container.lines.stream().map((x) -> String.format("[%s] %s %s", x.level, x.message, x.exception)).collect(Collectors.joining("\n"));
+                String fullLog = container.lines.stream().map((x) -> "[%s] %s %s".formatted(x.level, x.message, x.exception)).collect(Collectors.joining("\n"));
                 channel.sendMessage(new MessageBuilder()
                         .append("Произошла ошибка при выполнении команды: ")
                         .appendCodeBlock(e.toString(), "java")
@@ -116,7 +116,7 @@ public class DiscordBotListener extends ListenerAdapter {
             message = event.getMessage().getFormattedMessage().replaceAll("\u001B\\[[;\\d]*m", "");
             Throwable throwable = event.getMessage().getThrowable();
             if (throwable != null) {
-                exception = String.format("%s: %s", throwable.getClass().getName(), throwable.getMessage());
+                exception = "%s: %s".formatted(throwable.getClass().getName(), throwable.getMessage());
             } else {
                 exception = null;
             }
